src/test/ui/specialization/specialization-feature-gate-default.stderr
error[E0658]: specialization is unstable
  --> $DIR/specialization-feature-gate-default.rs:11:5
   |
LL |     default
   |     ^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/31844
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error[E0658]: specialization is unstable
  --> $DIR/specialization-feature-gate-default.rs:16:1
   |
LL | default
   | ^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/31844
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
